--- a/hello.html
+++ b/hello.html
@@ -6,11 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Welcome!</h1>
-=======
-    <h1 style='color: blue;'>Welcome</h1>
->>>>>>> e735487ca26fd27a86e6348e4c16a2fae486bbb2
+
+    <h1 style='color: blue;'>Welcome!!</h1>
     hello world
 </body>
 </html>
